added selenium file

--- a/PIAIC PYTHON LECTURE 2 .ipynb
+++ b/PIAIC PYTHON LECTURE 2 .ipynb
@@ -199,7 +199,7 @@
    ],
    "source": [
     "a = 8\n",
-    "print(type(a))           # a =pass ny reference\n",
+    "print(type(a))           # a =pass by reference\n",
     "print(type(a))          # a = pass by value"
    ]
   },
@@ -355,7 +355,7 @@
     }
    ],
    "source": [
-    "names  = {\"omer\",\"mubashir\",\"omer\"}    # no repetition in sets\n",
+    "names  = {\"omer\",\"mubashir\",\"omer\"}            # no repetition in sets\n",
     "print(names)\n",
     "type(names)                                    #indexing...slicing\n",
     "names = list(names) #type casting            #mutable..that can b changed\n",
@@ -370,7 +370,7 @@
    "outputs": [],
    "source": [
     "#tuple cant be updated\n",
-    "#list ,tuple index is ver imp\n",
+    "#list ,tuple index is very imp\n",
     "#dicitonary....roti no\n",
     "#index no is replaced by its specific key"
    ]
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
