--- a/PIAIC PYTHON LECTURE 4.ipynb
+++ b/PIAIC PYTHON LECTURE 4.ipynb
@@ -202,7 +202,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "when called with a varibale then method...if only () then function"
+    "when called with a variable then method...if only () then function"
    ]
   },
   {
@@ -812,9 +812,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pakistan1',\n",
+       " 'pakistan2',\n",
+       " 'pakistan3',\n",
+       " 'pakistan4',\n",
+       " 'pakistan5',\n",
+       " 'pakistan6',\n",
+       " 'pakistan7',\n",
+       " 'pakistan8',\n",
+       " 'pakistan9',\n",
+       " 'pakistan10']"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "[\"pakistan\"+str(x) for x in range(1,11)]  # list comprehensive"
    ]
@@ -1153,9 +1173,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-3-3007b4e64c19>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-3007b4e64c19>\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    print(index(list),i,end=\" \")\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "list = [[2,5,9],\n",
     "       [8,9,10],\n",
@@ -1165,8 +1194,8 @@
     "    for j in range(i):                   #for ci,c in enumerate(r):\n",
     "        if i%5==0:                           print((ri,ci), end=\" \")\n",
     "            print(index(list),i,end=\" \")\n",
-    "    else:\n",
-    "        return 0"
+    "        else:\n",
+    "            return 0"
    ]
   },
   {
