--- a/PIAIC PYTHON LECTURE 6.ipynb
+++ b/PIAIC PYTHON LECTURE 6.ipynb
@@ -39,7 +39,7 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "1.REQUIRED ARGUMENT FUNCTION  (which doesnt work without arguments): car movement,fuel=argument...shadi function\n",
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -259,8 +259,8 @@
     "data= [[1,\"qasim\",\"arshad\",\"A.I\",\"9 to 12\"],\n",
     "      [2,\"mubashir\",\"sultan\",\"AERO\",\" 3 t0 12\"]]\n",
     "for v in data:\n",
-    "    id_card(v[0],v[1],v[2],v[3],v[4])\n",
-    "    #id_card(*v)\n"
+    "    #id_card(v[0],v[1],v[2],v[3],v[4])\n",
+    "     id_card(*v)\n"
    ]
   },
   {
